Buggy popup filter on firefox

--- a/src/styles/components/popup.scss
+++ b/src/styles/components/popup.scss
@@ -175,3 +175,9 @@
 		font-weight: bold;
 	}
 }
+
+@supports (-moz-appearance: none) {
+	#popup_icon > div {
+		backdrop-filter: none;
+	}
+}
